# ProgrammingClasses

./: cezar.c  xor.c
AStar/: main.c
Dijkstra/: main.c
FlowOnFiles/: input.txt  main.c  output.txt
FlowOnPointers/: main.c
Graphs/: main.c
Integrate/src/: function.c  function.h  integrate.c  integrate.h  main.c
PlayForLife/: main.c
SortLibrary/: CMakeLists.txt
SortLibrary/src/: bubble_sort.c  insertion_sort.c  main.c  merge_sort.c  quick_sort.c  sort.h
SortToFile/src/: main.c  quick.c  sort.h
